moving on with kits, swivels

--- a/assets/vid/vids.html
+++ b/assets/vid/vids.html
@@ -26,7 +26,7 @@
   <iframe width="854" height="480" src="https://www.youtube.com/embed/9JqQyDoHzFY?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
 <div id="abx-2l-vid">
-  <iframe width="854" height="480" src="https://www.youtube.com/embed/jCTBlGM324Q?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+  <iframe width="854" height="480" src="https://www.youtube.com/embed/g-o16eETv74?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
 <div id="abx-2l-train-vid">
   <iframe width="854" height="480" src="https://www.youtube.com/embed/G8x8qTNmc7Q?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
