--- a/rotary-waterblast-tools/sh-swivel.html
+++ b/rotary-waterblast-tools/sh-swivel.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 page-type: product
-title: StoneAge SG Swivel - Rotary Couplings for High Pressure Industrial Cleaning
-permalink: /sg-swivel
+title: StoneAge SH Swivel - Rotary Couplings for High Pressure Industrial Cleaning
+permalink: /sh-swivel
 master-slider: yes
 ---
 
@@ -46,8 +46,8 @@ master-slider: yes
       <div class="clearfix"></div>
       </div>
       
-      <p class="product-description">SG Swivels are reliable, easy to maintain and are widely used in our surface preparation tools. Heavy-duty ball bearings with external grease fittings, stainless steel construction and long lasting high pressure seals combine to make these the best swivels in the industry.</p>
-      <p>The SG-CCN swivel was designed aspecifically as a rotating swivel connection for high rotation speeds.</p>
+      <p class="product-description">The SH swivel was designed to be a versatile, compact union for use in conveying high pressure fluid from a stationary line to a rotating or twisting assembly.</p>
+      <p>SH swivels can be installed between a tool’s inlet connection and the high pressure hose to prevent hose twist and ease hose handling. They can also provide compact rotary motion for a variety of low speed applications.</p>
       
       <h2>Features</h2>
       <ul class="feature-list">
@@ -90,12 +90,8 @@ master-slider: yes
             <div class="col-sm-8">
               <!-- Nav tabs -->
               <ul class="nav nav-tabs" role="tablist">
-                <li role="presentation" class="active"><a href="#sg-p8" aria-controls="sg-p8" role="tab" data-toggle="tab">SG-P8P8</a></li>
-                <li role="presentation"><a href="#sg-p12" aria-controls="sg-p12" role="tab" data-toggle="tab">SG-P12P12-62</a></li>
-                <li role="presentation"><a href="#sg-mp12" aria-controls="sg-mp12" role="tab" data-toggle="tab">SG-MP12AV12</a></li>
-                <li role="presentation"><a href="#sg-mp16" aria-controls="sg-mp16" role="tab" data-toggle="tab">SG-MP16MP16</a></li>
-                <li role="presentation"><a href="#sg-p12k" aria-controls="sg-p12k" role="tab" data-toggle="tab">SG-CCN-P12K</a></li>
-                <li role="presentation"><a href="#sg-mp12k" aria-controls="sg-mp12k" role="tab" data-toggle="tab">SG-CCN-MP12K</a></li>
+                <li role="presentation" class="active"><a href="#sg-p8" aria-controls="sg-p8" role="tab" data-toggle="tab">SH-P8P8</a></li>
+                <li role="presentation"><a href="#sg-p12" aria-controls="sg-p12" role="tab" data-toggle="tab">SH-MP12G14</a></li>
               </ul>
               <!-- Tab panes -->
               <div class="tab-content">
