--- a/waterblast-automation/autobox-abx-2l.html
+++ b/waterblast-automation/autobox-abx-2l.html
@@ -29,7 +29,7 @@ master-slider: yes
           <div class="ms-slide">
             <img class="ms-brd" src="/assets/img/blank.gif" data-src="/assets/img/product/abx-2l-01.jpg" alt="AutoBox ABX-2L exchanger cleaning system">
             <img class="ms-thumb" src="/assets/img/product/thumb-abx-2l-01.jpg" alt="thumb">
-              <a data-type="video" href="https://www.youtube.com/embed/jCTBlGM324Q"> </a>
+              <a data-type="video" href="https://www.youtube.com/embed/g-o16eETv74"> </a>
           </div>
           <div class="ms-slide">
             <img src="/assets/img/blank.gif" data-src="/assets/img/product/abx-2l-02.jpg" alt="AutoBox ABX-2L exchanger cleaning system">
