--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -265,8 +265,8 @@ landing: yes
           </a>
         </div>
         
-        <div class="mix surface-prep">
-          <a href="/barracuda" class="search-text" data-name="barracuda">
+        <div class="mix surface-prep" data-name="barracuda">
+          <a href="/barracuda" class="search-text">
             <img src="/assets/img/product/barracuda-01.jpg" class="img-responsive" />
             <h3>Barracuda</h3>
             <h5>Rotary shotgun cleaning nozzles</h5>
@@ -740,7 +740,7 @@ landing: yes
           <a href="/raptor" class="search-text">
             <img src="/assets/img/product/rpt-02.jpg" class="img-responsive" />
             <h3>Raptor</h3>
-            <h5>Rotary cleaning nozzle for straight pipes</h5>
+            <h5>Rotary cleaning for straight pipes</h5>
             <table class="table">
               <tbody>
                 <tr>
