--- a/rotary-waterblast-tools/barracuda-shotgunning.html
+++ b/rotary-waterblast-tools/barracuda-shotgunning.html
@@ -591,7 +591,7 @@ master-slider: yes
                   <div class="panel-heading" role="tab" id="heading4">
                     <h4 class="panel-title">
                       <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse4" aria-expanded="false" aria-controls="collapse4">
-                        <strong>BC 602-H9-C</strong> Seal Kit for BC-H9-C<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                        <strong>BC 602-H9-C</strong> Seal Kit for BC-H9-C (BC 505-S)<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
                       </a>
                     </h4>
                   </div>
@@ -624,11 +624,42 @@ master-slider: yes
                   <div class="panel-heading" role="tab" id="heading5">
                     <h4 class="panel-title">
                       <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse5" aria-expanded="false" aria-controls="collapse5">
-                        <strong>BC 610</strong> Overhaul Kit for BC-K<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                        <strong>BC 607-H9-C</strong> Seal Kit for BC-H9-C (BC 705)<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
                       </a>
                     </h4>
                   </div>
                   <div id="collapse5" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading5">
+                    <div class="panel-body">
+                      <div class="row">
+                        <div class="col-sm-6">
+                          <ul>
+                            <li>1 x <strong>BC 711</strong> Seat, Carbide</li>
+                            <li>1 x <strong>BC 712-O</strong> HP Seal Assembly</li>
+                            <li>1 x <strong>BC 714</strong> Mandrel</li>
+                            <li>1 x <strong>BC 720</strong> Seal Retainer</li>
+                          </ul>
+                        </div>
+                        <div class="col-sm-6">
+                          <ul>
+                            <li>1 x <strong>BC 722</strong> Inlet Seat Housing</li>
+                            <li>1 x <strong>BC 724</strong> Spring, Compression</li>
+                            <li>1 x <strong>BJ 417</strong> O-Ring</li>
+                            <li>1 x <strong>PL 607</strong> Tool Manual</li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="panel panel-default">
+                  <div class="panel-heading" role="tab" id="heading6">
+                    <h4 class="panel-title">
+                      <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse6" aria-expanded="false" aria-controls="collapse6">
+                        <strong>BC 610</strong> Overhaul Kit for BC-K<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                      </a>
+                    </h4>
+                  </div>
+                  <div id="collapse6" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading6">
                     <div class="panel-body">
                       <div class="row">
                         <div class="col-sm-6">
@@ -664,14 +695,14 @@ master-slider: yes
                   </div>
                 </div>
                 <div class="panel panel-default">
-                  <div class="panel-heading" role="tab" id="heading6">
+                  <div class="panel-heading" role="tab" id="heading7">
                     <h4 class="panel-title">
-                      <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse6" aria-expanded="false" aria-controls="collapse6">
+                      <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse7" aria-expanded="false" aria-controls="collapse7">
                         <strong>BC 610-H9-C</strong> Overhaul Kit for BC-H9-C<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
                       </a>
                     </h4>
                   </div>
-                  <div id="collapse6" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading6">
+                  <div id="collapse7" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading7">
                     <div class="panel-body">
                       <div class="row">
                         <div class="col-sm-6">
@@ -703,14 +734,14 @@ master-slider: yes
                   </div>
                 </div>
                 <div class="panel panel-default">
-                  <div class="panel-heading" role="tab" id="heading7">
+                  <div class="panel-heading" role="tab" id="heading8">
                     <h4 class="panel-title">
-                      <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse7" aria-expanded="false" aria-controls="collapse7">
+                      <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse8" aria-expanded="false" aria-controls="collapse8">
                         <strong>BC 610-H9-C-Ti</strong> Overhaul Kit for BC-H9-C-Ti<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
                       </a>
                     </h4>
                   </div>
-                  <div id="collapse7" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading7">
+                  <div id="collapse8" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading8">
                     <div class="panel-body">
                       <div class="row">
                         <div class="col-sm-6">
@@ -742,14 +773,14 @@ master-slider: yes
                   </div>
                 </div>
                 <div class="panel panel-default">
-                  <div class="panel-heading" role="tab" id="heading8">
+                  <div class="panel-heading" role="tab" id="heading9">
                     <h4 class="panel-title">
-                      <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse8" aria-expanded="false" aria-controls="collapse8">
+                      <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse9" aria-expanded="false" aria-controls="collapse9">
                         <strong>BC 612</strong> Tool Kit for BC-K/BC-H9-C/BC-H9-C-Ti<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
                       </a>
                     </h4>
                   </div>
-                  <div id="collapse8" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading8">
+                  <div id="collapse9" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading9">
                     <div class="panel-body">
                       <div class="row">
                         <div class="col-sm-6">
