--- a/waterblast-automation/torus-tr-130.html
+++ b/waterblast-automation/torus-tr-130.html
@@ -224,17 +224,77 @@ master-slider: yes
               <div class="panel-heading" role="tab" id="headingOne">
                 <h4 class="panel-title">
                   <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                    <strong>ABX-500 EPP</strong> AutoBox ABX-500 Extra Parts Package<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                    <strong>TR130 600</strong> Service kit for TR-130<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
                   </a>
                 </h4>
               </div>
               <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
                 <div class="panel-body">
-                  <ul>
-                    <li>Drive roller assembly</li>
-                    <li>Anti-seize</li>
-                    <li>Square-end key</li>
-                  </ul>
+                  <div class="row">
+                    <div class="col-sm-6">
+                      <ul>
+                        <li>1 x <strong>GP 043</strong> Blue Goop, 2 oz.</li>
+                        <li>1 x <strong>GP 180</strong> Loctite, 242 Blue .5mL</li>
+                        <li>2 x <strong>HC 012-TO</strong> H.P. Seal Assembly</li>
+                        <li>2 x <strong>MJ 011-C</strong> Carbide Seat</li>
+                      </ul>
+                    </div>
+                    <div class="col-sm-6">
+                      <ul>
+                        <li>2 x <strong>SA 059</strong> O-Ring, G12</li>
+                        <li>2 x <strong>TR 245</strong> HP Seal, Manifold</li>
+                        <li>1 x <strong>WS 210</strong> O-Ring</li>
+                        <li>1 x <strong>PL 556</strong> Tool Manual</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="panel panel-default">
+              <div class="panel-heading" role="tab" id="headingTwo">
+                <h4 class="panel-title">
+                  <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    <strong>TR130 610</strong> Overhaul kit for TR-130<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                  </a>
+                </h4>
+              </div>
+              <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+                <div class="panel-body">
+                  <div class="row">
+                    <div class="col-sm-6">
+                      <ul>
+                        <li>2 x <strong>BJ 007</strong> Bearing, Angle Contact</li>
+                        <li>1 x <strong>BR 196</strong> Retaining Ring</li>
+                        <li>1 x <strong>CJ 009</strong> Bearing</li>
+                        <li>1 x <strong>GP 043</strong> Blue Goop, 2 oz.</li>
+                        <li>1 x <strong>GP 180</strong> Loctite, 242 Blue .5mL</li>
+                        <li>2 x <strong>HC 012-TO</strong> H.P. Seal Assembly</li>
+                        <li>1 x <strong>MJ 008</strong> O-Ring</li>
+                        <li>2 x <strong>MJ 011-C</strong> Carbide Seat </li>
+                        <li>1 x <strong>PTL 078</strong> Retaining Ring</li>
+                        <li>2 x <strong>SA 059</strong> O-Ring, G12</li>
+                        <li>1 x <strong>SG 009</strong> Bearing, Ball</li>
+                        <li>2 x <strong>TR 134</strong> Seal</li>
+                      </ul>
+                    </div>
+                    <div class="col-sm-6">
+                      <ul>
+                        <li>2 x <strong>TR 136</strong> Bearing, Needle Roller</li>
+                        <li>2 x <strong>TR 138</strong> Retaining Ring</li>
+                        <li>2 x <strong>TR 245</strong> HP Seal, Manifold</li>
+                        <li>4 x <strong>TR130 105</strong> O-Ring</li>
+                        <li>2 x <strong>TR130 113</strong> Seal</li>
+                        <li>2 x <strong>TR130 114</strong> Retaining Ring</li>
+                        <li>2 x <strong>TR130 230</strong> Bearing, Ball</li>
+                        <li>2 x <strong>TR130 233</strong> O-Ring</li>
+                        <li>2 x <strong>TR130 234</strong> Retaining Ring</li>
+                        <li>1 x <strong>WS 029</strong> Seal, Large</li>
+                        <li>1 x <strong>WS 210</strong> O-Ring</li>
+                        <li>1 x <strong>PL 556</strong> Tool Manual</li>
+                      </ul>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
