--- a/waterblast-automation/torus-tr-200.html
+++ b/waterblast-automation/torus-tr-200.html
@@ -79,7 +79,7 @@ master-slider: yes
         <li><a href="#section-bar-1"><span>Specifications</span></a></li>
         <li><a href="#section-bar-2"><span>Manuals/Docs</span></a></li>
 <!--        <li><a href="#section-bar-3"><span>Videos</span></a></li>-->
-<!--        <li><a href="#section-bar-4"><span>Service Kits</span></a></li>-->
+        <li><a href="#section-bar-3"><span>Service Kits</span></a></li>
       </ul>
     </nav>
     <div class="content-wrap">
@@ -113,7 +113,7 @@ master-slider: yes
             </tr>
             <tr>
               <th>Inlet Connection</th>
-              <td colspan="2">P16 (up to 12k psi MAWP) M16 (up to 15k psi MAWP)</td>
+              <td colspan="2">P16 (up to 12k psi MAWP)<br>M16 (up to 15k psi MAWP)</td>
             </tr>
             <tr>
               <th>Rotation Speed</th>
@@ -178,8 +178,8 @@ master-slider: yes
         </div>
       </section> -->
 
-      <!-- Kits 
-      <section id="section-bar-4">
+      <!-- Kits -->
+      <section id="section-bar-3">
         <div class="col-sm-8">
           <h3>The following kits are available:</h3>
           <p><em class="grey">Click to view kit contents</em></p>
@@ -188,17 +188,70 @@ master-slider: yes
               <div class="panel-heading" role="tab" id="headingOne">
                 <h4 class="panel-title">
                   <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                    <strong>ABX-500 EPP</strong> AutoBox ABX-500 Extra Parts Package<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                    <strong>TR200 600</strong> Service kit for TR-200<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
                   </a>
                 </h4>
               </div>
               <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
                 <div class="panel-body">
-                  <ul>
-                    <li>Drive roller assembly</li>
-                    <li>Anti-seize</li>
-                    <li>Square-end key</li>
-                  </ul>
+                  <div class="row">
+                    <div class="col-sm-6">
+                      <ul>
+                        <li>2 x <strong>BJ 072</strong> O-Ring</li>
+                        <li>1 x <strong>GP 043</strong> Blue Goop, 2 oz.</li>
+                        <li>2 x <strong>SM 011</strong> Carbide Seat</li>
+                        <li>2 x <strong>SM 012-O</strong> H.P. Seal, &amp; O-Ring</li>
+                        <li>1 x <strong>TR200 121</strong> O-Ring</li>
+                        <li>2 x <strong>TR200 245</strong> H.P. Seal, Manifold</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="panel panel-default">
+              <div class="panel-heading" role="tab" id="headingTwo">
+                <h4 class="panel-title">
+                  <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    <strong>TR200 610</strong> Overhaul kit for TR-200<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                  </a>
+                </h4>
+              </div>
+              <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+                <div class="panel-body">
+                  <div class="row">
+                    <div class="col-sm-6">
+                      <ul>
+                        <li>1 x <strong>BJ 008</strong> O-Ring</li>
+                        <li>2 x <strong>BJ 072</strong> O-Ring</li>
+                        <li>2 x <strong>CY 015</strong> Seal</li>
+                        <li>1 x <strong>GP 043</strong> Blue Goop, 2 oz.</li>
+                        <li>1 x <strong>MJ 007</strong> Bearing, Ball</li>
+                        <li>1 x <strong>PTL 078</strong> Retaining Ring</li>
+                        <li>2 x <strong>RJ 040-K</strong> O-Ring</li>
+                        <li>2 x <strong>SG 007</strong> Seal, Large</li>
+                        <li>1 x <strong>SM 009</strong> Bearing</li>
+                        <li>2 x <strong>SM 011</strong> Carbide Seat</li>
+                        <li>2 x <strong>SM 012-O</strong> H.P. Seal, &amp; O-Ring</li>
+                        <li>2 x <strong>TR200 007</strong> Bearing</li>
+                      </ul>
+                    </div>
+                    <div class="col-sm-6">
+                      <ul>
+                        <li>2 x <strong>TR200 038</strong> Retaining Ring</li>
+                        <li>3 x <strong>TR200 105</strong> O-Ring</li>
+                        <li>1 x <strong>TR200 116</strong> Retaining Ring</li>
+                        <li>2 x <strong>TR200 118</strong> Retaining Ring</li>
+                        <li>1 x <strong>TR200 121</strong> O-Ring</li>
+                        <li>2 x <strong>TR200 136</strong> Bearing, Needle Roller</li>
+                        <li>1 x <strong>TR200 175</strong> O-Ring</li>
+                        <li>1 x <strong>TR200 213</strong> O-Ring</li>
+                        <li>1 x <strong>TR200 224</strong> Retaining Ring</li>
+                        <li>2 x <strong>TR200 245</strong> H.P. Seal, Manifold</li>
+                        <li>1 x <strong>PL 557</strong> Tool Manual</li>
+                      </ul>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -210,7 +263,6 @@ master-slider: yes
           <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
         </aside>
       </section>
--->
 
     </div><!-- /content -->
   </div><!-- /tabs -->
