swivels and kits continued

--- a/assets/vid/vids.html
+++ b/assets/vid/vids.html
@@ -5,6 +5,9 @@
 <div id="rentals-vid">
   <iframe width="854" height="480" src="https://www.youtube.com/embed/RBRXZTQLBf0?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
+<div id="sa-eu-vid">
+  <iframe width="854" height="480" src="https://www.youtube.com/embed/lq24WZ0_pcA?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+</div>
 
 <!-- WB -->
 <div id="hcs-vid">
