--- a/indexBAK.html
+++ b/indexBAK.html
@@ -1,94 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-  
-  <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+---
+layout: default
+title: StoneAge Waterblast Tools for High Pressure Hydroblasting, Sewer Jetting, Downhole Cleaning
+permalink: /
+---
 
-  <title>StoneAge Waterblast Tools for High Pressure Hydroblasting, Sewer Jetting, Downhole Cleaning</title>
-  <meta name="description" content="Manufacturing high quality waterblast tools and automated equipment for high pressure hydroblasting/industrial cleaning, sewer jetting nozzles, and downhole tools for well intervention.">
-
-  <!-- Fonts -->
-  <link href='https://fonts.googleapis.com/css?family=Lato:400,100,300,300italic,100italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,700,300,100' rel='stylesheet' type='text/css'>
-  
-  <!-- Basic Styles -->
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-  
-  <!-- Custom Styles -->
-  <link rel="stylesheet" href="/assets/css/main.css">
-  <link rel="stylesheet" href="/assets/css/media.css">
-  <link rel="canonical" href="http://stoneagetools.com/">
-  <link rel="alternate" type="application/rss+xml" title="StoneAge Waterblast Tools" href="http://stoneagetools.com/feed.xml">
-  
-  <!-- Plugin Styles -->
-  <link href="/assets/plugins/featherlight/featherlight.min.css" type="text/css" rel="stylesheet" />
-</head>
-
-  
-  <body id="top" class="">
-  
-    <nav class="navbar navbar-default navbar-fixed-top">
-  <!-- Utilities Nav -->
-  <div class="row utilities">
-    <div class="container">
-      <div class="col-sm-4">
-        <ul class="list-inline">
-          <li>
-            <div class="dropdown social-share">
-              <a href="#" class="dropdown-toggle" type="button" data-toggle="dropdown"><i class="fa fa-share-alt"></i> Social Media</a>
-              <ul class="dropdown-menu">
-                <li><a href="https://www.youtube.com/channel/UCdK135J8Z9uHdG67eJ08LyA" target="_blank"><i class="fa fa-youtube-play"></i> YouTube</a></li>
-                <li><a href="https://www.facebook.com/Stoneagetools/" target="_blank"><i class="fa fa-facebook-official"></i> Facebook</a></li>
-                <li><a href="https://www.linkedin.com/company/stone-age-waterblast-tools" target="_blank"><i class="fa fa-linkedin-square"></i> LinkedIn</a></li>
-                <li><a href="https://twitter.com/stoneagetools" target="_blank"><i class="fa fa-twitter"></i> Twitter</a></li>
-              </ul>
-            </div>
-          </li>
-        </ul>
-      </div>
-      <div class="col-sm-8 utils">
-        <ul class="list-inline">
-          <li><a href="/contact">Contact</a></li>
-          <li><a href="/rentals">Rentals</a></li>
-          <li><a href="/request-catalog">Request a Catalog</a></li>
-          <li><a href="http://dealer.stoneagetools.com" target="_blank">Portal Login</a></li>
-          <li><a href="http://jetting.stoneagetools.com/" target="_blank">Jetting</a></li>
-        </ul>
-      </div>
-      <!-- Mobile only contact -->
-      <div class="col-sm-12 mobile-contact">
-        <h4><i class="fa fa-phone"></i> 1-970-259-2869</h4>
-      </div>
-      <!-- End Mobile only contact -->
-    </div>
-  </div>
-  <!-- Main Nav -->
-  <div class="row main-nav">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span> 
-        </button>
-        <a class="navbar-brand" href="/"><img src="/assets/img/stoneage_logo.png" class="img-responsive" alt="StoneAge waterblast tools"></a>
-      </div>
-      <div class="collapse navbar-collapse" id="myNavbar">
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="/waterblast-tools-automated-equipment">Waterblast Tools &amp;<br/>Equipment</a></li>
-          <li><a href="/sewer-tools">Sewer Jetting &amp;<br/>Hydro-X Nozzles</a></li>
-          <li><a href="/downhole-tools">Downhole<br/>Tools</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</nav>
-
-    <!-- Carousel -->
+<!-- Carousel -->
 <div class="containter-fluid home-slider">
   <div id="homeSlides" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
@@ -272,16 +188,6 @@
     </div>
     <ul class="home-news list-unstyled">
       <li>
-        <h4><a href="http://news.stoneagetools.com/europe-2017">StoneAge Announces Direct Sales and New Distribution Territories in Europe</a></h4>
-        <p>StoneAge will directly support industrial cleaning contractor needs in Western Europe by adding sales staff throughout the U.K., Netherlands and France as well as opening its European headquarters in the United Kingdom. Non-Western EEA markets will continue to be served by its realigned and exclusive distribution network.<br>
-        <small><i class="fa fa-newspaper-o"></i> PRWeb, January 2017</small></p>
-      </li>
-      <li>
-        <h4><a href="http://news.stoneagetools.com/new-regional-sales-managers" target="_blank">Meet Our Newest Regional Sales Managers</a></h4>
-        <p>StoneAge is pleased to welcome two new Regional Sales Managers to our outside sales team: Sean Baker and John Graham.<br>
-        <small><i class="fa fa-paper-plane-o"></i> E-blast, December 2016</small></p>
-      </li>
-      <li>
         <h4><a href="http://news.stoneagetools.com/sales-org-announcement-dec-2016">StoneAge Sales Organization Announcement</a></h4>
         <p>CEO, Kerry Siggins, announces changes to StoneAge's global sales structure to improve support to the company's international dealer network and growing global customer base.<br>
         <small><i class="fa fa-paper-plane-o"></i> E-blast, December 2016</small></p>
@@ -296,6 +202,16 @@
         <p>Multifunction WGR Switcher nozzle improves sewer cleaning efficiency.<br>
         <small><i class="fa fa-newspaper-o"></i> Cleaner Magazine, November 2016</small></p>
       </li>
+      <li>
+        <h4><a href="http://news.stoneagetools.com/wireless-tracked-striker">Wireless Tracked Striker Now Available</a></h4>
+        <p>StoneAge is pleased to announce the New Wireless Tracked Striker Remote Shotgun System.<br>
+        <small><i class="fa fa-paper-plane-o"></i> E-blast, October 2016</small></p>
+      </li>
+      <li>
+        <h4><a href="http://news.stoneagetools.com/rental-program-for-waterblast-equipment-launched" target="_blank">Rentals Now Available</a></h4>
+        <p>StoneAge announces rental program for waterblast tools and equipment. You can now rent industry-leading waterblast tools and automated equipment from StoneAge regional locations in TX, LA, and OH.<br>
+        <small><i class="fa fa-paper-plane-o"></i> E-blast, September 2016</small></p>
+      </li>
       <li><a href="/news">More news here</a></li>
     </ul>
   </div>
@@ -306,14 +222,14 @@
     <div class="section-heading">
       <h2>Message from the CEO</h2>
     </div>
+    <p><a href="/rentals.html">Rentals Now Available</a> at all regional locations with nationwide support.</p>
     <!-- Lightbox call -->
     <div>
-      <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #sa-eu-vid">
-        <img src="assets/vid/thumb/sa-eu-vid.jpg" alt="StoneAge Europe video" class="img-responsive" />
+      <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #rentals-vid">
+        <img src="assets/vid/thumb/rentals-vid.png" alt="StoneAge Tool Rentals video" class="img-responsive" />
       </a>
     </div>
     <!-- End Lightbox call -->
-    <p><a href="/europe-2017">StoneAge Announces Direct Sales and New Distribution Territories in Europe</a></p>
     
     <div class="section-heading margin-top-30">
       <h2>Mobile App</h2>
@@ -392,121 +308,4 @@ The products we purchase are of the highest specification from a technical, qual
   }
 </script>
 
-<!-- Footer CTA -->
-<div class="row footer-cta">
-  <div class="container">
-    <a href="/contact">Need help with a job? <span>Contact Our Support Team</span> <i class="fa fa-whatsapp"></i></a>
-  </div>
-</div>
-<!-- End Footer CTA -->
-
-
-    <!-- Footer -->
-  <footer>
-    <div class="container padding-tb-30">
-
-      <div class="col-sm-3 padding-right-60">
-        <div class="section-heading">
-          <h3>Product Support</h3>
-        </div>
-        <ul class="list-unstyled link-list">
-          <li><a href="/product-catalogs">Product Catalogs</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="/technical-reference">Technical Reference</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="/service">Service &amp; Repairs</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="/safety">Safety Information</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="/custom-solutions">Custom Solutions</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="/rentals">Rentals</a><i class="fa fa-angle-right"></i></li>
-        </ul>
-      </div>
-
-      <div class="col-sm-3 padding-right-60">
-        <div class="section-heading">
-          <h3>About StoneAge</h3>
-        </div>
-        <ul class="list-unstyled link-list">
-          <li><a href="/about">Our Story</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="/jobs">Careers</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="/news">News</a><i class="fa fa-angle-right"></i></li>
-          <li><a href="/contact">Contact</a><i class="fa fa-angle-right"></i></li>
-        </ul>
-      </div>
-
-      <div class="col-sm-3 padding-right-60 margin-top-30">
-        
-      </div>
-
-      <div class="col-sm-3 map-bg">
-        <a href="/"><img class="footer-logo" src="/assets/img/stoneage-negative.png" alt="StoneAge - Engineering the Power of Water"></a>
-        <address style="padding-left:50px; padding-top:20px;">
-            466 South Skylane Drive <br />
-            Durango, CO 81303 <br />
-            Phone: +1 970 259 2869 <br />
-            Toll Free US: 866 795 1586 <br />
-            <a href="/contact"><i class="fa fa-envelope"></i> Send us an e-mail</a><br>
-            <a href="/subscribe"><i class="fa fa-paper-plane"></i> Subscribe to E-Blasts</a>
-        </address>
-      </div>
-
-    </div>
-  </footer>
-
-  <div class="fluid-container copyright">
-    <div class="container">
-      <div class="col-md-11">
-        <p>2016 &copy; All Rights Reserved. <a href="/patents">Patents</a> | <a href="/trademarks">Trademarks</a> | <a href="/terms">Terms</a>
-        </p>
-      </div>
-      <div class="col-md-1">
-        <a href="#top" title="To Top">
-          <i class="fa fa-caret-up"></i>
-        </a>
-      </div>
-    </div>
-  </div>
-  <!-- End Footer -->
-
-
-  <!-- Scripts -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-  <script src="/assets/plugins/featherlight/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
-  <script src="/assets/js/custom.js"></script>
-  
-  <!-- product slider script dependencies -->
-  
-
-  <!-- contact script dependencies -->
-  
-  
-  
-  
-  
-  
-  
-  
-  <!-- Start of Async HubSpot Analytics Code -->
-  <script type="text/javascript">
-    (function(d,s,i,r) {
-    if (d.getElementById(i)){return;}
-    var n=d.createElement(s),e=d.getElementsByTagName(s)[0];
-    n.id=i;n.src='//js.hs-analytics.net/analytics/'+(Math.ceil(new Date()/r)*r)+'/1875880.js';
-    e.parentNode.insertBefore(n, e);
-    })(document,"script","hs-analytics",300000);
-  </script>
-  <!-- End of Async HubSpot Analytics Code --> 
-  
-  <!-- Start Google Analytics Code -->
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    ga('create', 'UA-19225233-1', 'auto');
-    ga('send', 'pageview');
-  </script>
-  <!-- End Google Analytics Code -->
-
-
-  </body>
-
-</html>
+{% include footer-cta.html %}
