wrong branch updates corrections

--- a/index.html
+++ b/index.html
@@ -188,6 +188,11 @@ permalink: /
     </div>
     <ul class="home-news list-unstyled">
       <li>
+        <h4><a href="http://news.stoneagetools.com/europe-2017">StoneAge Announces Direct Sales and New Distribution Territories in Europe</a></h4>
+        <p>StoneAge will directly support industrial cleaning contractor needs in Western Europe by adding sales staff throughout the U.K., Netherlands and France as well as opening its European headquarters in the United Kingdom. Non-Western EEA markets will continue to be served by its realigned and exclusive distribution network.<br>
+        <small><i class="fa fa-newspaper-o"></i> PRWeb, January 2017</small></p>
+      </li>
+      <li>
         <h4><a href="http://news.stoneagetools.com/new-regional-sales-managers" target="_blank">Meet Our Newest Regional Sales Managers</a></h4>
         <p>StoneAge is pleased to welcome two new Regional Sales Managers to our outside sales team: Sean Baker and John Graham.<br>
         <small><i class="fa fa-paper-plane-o"></i> E-blast, December 2016</small></p>
@@ -207,11 +212,6 @@ permalink: /
         <p>Multifunction WGR Switcher nozzle improves sewer cleaning efficiency.<br>
         <small><i class="fa fa-newspaper-o"></i> Cleaner Magazine, November 2016</small></p>
       </li>
-      <li>
-        <h4><a href="http://news.stoneagetools.com/wireless-tracked-striker">Wireless Tracked Striker Now Available</a></h4>
-        <p>StoneAge is pleased to announce the New Wireless Tracked Striker Remote Shotgun System.<br>
-        <small><i class="fa fa-paper-plane-o"></i> E-blast, October 2016</small></p>
-      </li>
       <li><a href="/news">More news here</a></li>
     </ul>
   </div>
@@ -222,14 +222,14 @@ permalink: /
     <div class="section-heading">
       <h2>Message from the CEO</h2>
     </div>
-    <p><a href="/rentals.html">Rentals Now Available</a> at all regional locations with nationwide support.</p>
     <!-- Lightbox call -->
     <div>
-      <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #rentals-vid">
-        <img src="assets/vid/thumb/rentals-vid.png" alt="StoneAge Tool Rentals video" class="img-responsive" />
+      <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #sa-eu-vid">
+        <img src="assets/vid/thumb/sa-eu-vid.jpg" alt="StoneAge Europe video" class="img-responsive" />
       </a>
     </div>
     <!-- End Lightbox call -->
+    <p><a href="/europe-2017">StoneAge Announces Direct Sales and New Distribution Territories in Europe</a></p>
     
     <div class="section-heading margin-top-30">
       <h2>Mobile App</h2>
