wrong branch updates corrections

--- a/news.html
+++ b/news.html
@@ -17,6 +17,14 @@ permalink: /news
       
       <div class="media">          
         <div class="media-body">
+          <a href="http://news.stoneagetools.com/europe-2017"><h4 class="media-heading"><i class="fa fa-newspaper-o"></i> StoneAge Announces Direct Sales and New Distribution Territories in Europe</h4></a>
+          StoneAge will directly support industrial cleaning contractor needs in Western Europe by adding sales staff throughout the U.K., Netherlands and France as well as opening its European headquarters in the United Kingdom. Non-Western EEA markets will continue to be served by its realigned and exclusive distribution network.
+          <p class="grey"><small>PRWeb &ndash; January 11, 2017</small></p>
+        </div>
+      </div>
+      
+      <div class="media">          
+        <div class="media-body">
           <a href="http://news.stoneagetools.com/new-regional-sales-managers"><h4 class="media-heading"><i class="fa fa-paper-plane-o"></i> Meet Our Newest Regional Sales Managers</h4></a>
           StoneAge is pleased to welcome two new Regional Sales Managers to our outside sales team: Sean Baker and John Graham.
           <p class="grey"><small>E-blast &ndash; December 22, 2016</small></p>
