--- a/index.html
+++ b/index.html
@@ -188,6 +188,11 @@ permalink: /
     </div>
     <ul class="home-news list-unstyled">
       <li>
+        <h4><a href="http://news.stoneagetools.com/welcome-european-team" target="_blank">StoneAge Welcomes European Team</a></h4>
+        <p>StoneAge is pleased to welcome our newest StoneAge Europe team members: Steve Ellis, Jan van der Wal, and Andrew Birt.<br>
+        <small><i class="fa fa-paper-plane-o"></i> E-blast, January 2017</small></p>
+      </li>
+      <li>
         <h4><a href="http://news.stoneagetools.com/europe-2017">StoneAge Announces Direct Sales and New Distribution Territories in Europe</a></h4>
         <p>StoneAge will directly support industrial cleaning contractor needs in Western Europe by adding sales staff throughout the U.K., Netherlands and France as well as opening its European headquarters in the United Kingdom. Non-Western EEA markets will continue to be served by its realigned and exclusive distribution network.<br>
         <small><i class="fa fa-newspaper-o"></i> PRWeb, January 2017</small></p>
@@ -206,11 +211,6 @@ permalink: /
         <h4><a href="http://news.stoneagetools.com/best-place-to-work-2016">StoneAge Recognized in OUTSIDE’s Best Places to Work 2016</a></h4>
         <p>Each year, OUTSIDE recognizes the top 100 companies in the United States that help their employees strike the ideal balance between work and play.<br>
         <small><i class="fa fa-newspaper-o"></i> Outside Magazine, November 2016</small></p>
-      </li>
-      <li>
-        <h4><a href="http://news.stoneagetools.com/switcher-two-tools-in-one-cleaner-mag">Two Pipe Cleaning Tools in One</a></h4>
-        <p>Multifunction WGR Switcher nozzle improves sewer cleaning efficiency.<br>
-        <small><i class="fa fa-newspaper-o"></i> Cleaner Magazine, November 2016</small></p>
       </li>
       <li><a href="/news">More news here</a></li>
     </ul>
