--- a/waterblast-automation/blackhawk-concrete-demo.html
+++ b/waterblast-automation/blackhawk-concrete-demo.html
@@ -27,13 +27,13 @@ master-slider: yes
       <div class="ms-showcase2-template">
         <div class="master-slider ms-skin-default" id="masterslider">
           <div class="ms-slide">
-            <img class="ms-brd" src="../assets/img/blank.gif" data-src="../assets/img/product/blackhawk-01.jpg" alt="Blackhawk concrete hydro-demolition system">
-            <img class="ms-thumb" src="../assets/img/product/thumb-blackhawk-01.jpg" alt="thumb">
+            <img class="ms-brd" src="/assets/img/blank.gif" data-src="/assets/img/product/blackhawk-01.jpg" alt="Blackhawk concrete hydro-demolition system">
+            <img class="ms-thumb" src="/assets/img/product/thumb-blackhawk-01.jpg" alt="thumb">
 <!--                <a data-type="video" href="https://www.youtube.com/embed/7vQnk7mVT5A"> </a>-->
           </div>
           <div class="ms-slide">
-            <img src="../assets/img/blank.gif" data-src="../assets/img/product/blackhawk-02.jpg" alt="Blackhawk concrete hydro-demolition system">
-            <img class="ms-thumb" src="../assets/img/product/thumb-blackhawk-02.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/blackhawk-02.jpg" alt="Blackhawk concrete hydro-demolition system">
+            <img class="ms-thumb" src="/assets/img/product/thumb-blackhawk-02.jpg" alt="thumb">
           </div>
         </div>
       </div>
@@ -68,7 +68,7 @@ master-slider: yes
             <div class="panel-body">
               <ul>
                 <li>Can be configured to specific nozzle standoff, traverse and rotation speeds/rates which helps to maintain consistent/repeatable results - No need to reconfigure after each use</li>
-            <li>Adjustment knobs are on the front of the carriage which allows the rotation speed and traverse speed to be independently adjusted</li>
+                <li>Adjustment knobs are on the front of the carriage which allows the rotation speed and traverse speed to be independently adjusted</li>
                 <li>Movable stops on either side control travel distance allowing for adjustable travel for specific applications</li>
                 <li>Removes up to 12 in. (30.5 cm) of material or more based on pressure, flow, and grade of concrete</li>
               </ul>
@@ -88,8 +88,7 @@ master-slider: yes
               <ul>
                 <li>Horizontal uses: bridge decks, parking structures, bike paths</li>
                 <li>Vertical uses: piers, buildings, tanks, walls</li>
-                <li>Scarification to provide a good bonding surface
-</li>
+                <li>Scarification to provide a good bonding surface</li>
                 <li>Partial depth cuts to expose rebar and remove damaged or defective concrete</li>
                 <li>Removing concrete without causing damage to steel/rebar structure or fracturing</li>
               </ul>
@@ -174,8 +173,9 @@ master-slider: yes
           <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
             <div class="panel-body">
               <ul>
-                <li><a href="../assets/pdf/bhk_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Blackhawk BHK-100 Data Sheet</a></li>
-                <li><a href="../assets/pdf/concrete_demo_rates_comparison.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Concrete Hydrodemolition Removal Rates Comparison</a></li>
+                <li><a href="/assets/pdf/bhk_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Blackhawk BHK-100 Data Sheet</a></li>
+                <li><a href="/assets/pdf/manuals/BHK-100_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Blackhawk BHK-100 Manual</a></li>
+                <li><a href="/assets/pdf/concrete_demo_rates_comparison.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Concrete Hydrodemolition Removal Rates Comparison</a></li>
               </ul>
               <p><strong>Our expert staff is available Monday through Friday 8AM - 5PM MST</strong> to answer questions and offer advice on your toughest cleaning applications.</p>
               <h4 class="slab bold">Phone: +1 970 259-2869 &nbsp; | &nbsp; US Toll Free: (866) 795-1586</h4>
@@ -184,7 +184,7 @@ master-slider: yes
         </div><!-- end tab -->
       </div><!-- end accordion -->
 
-      <a href="../contact.html" class="btn btn-lg btn-block contact" role="button">Contact Us for Availability</a>
+      <a href="/contact.html" class="btn btn-lg btn-block contact" role="button">Contact Us for Availability</a>
     </div>
   </div>
   <!-- End Product Info -->
@@ -206,7 +206,7 @@ master-slider: yes
     <div class="col-md-4 col-md-offset-1">
       <table>
         <tr>
-          <td><a href="../assets/pdf/bhk_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>
+          <td><a href="/assets/pdf/bhk_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i><br>Download Data Sheet</a></td>
           <td><a href="/safety"><i class="fa fa-warning"></i><br>Tool Safety</a></td>
         </tr>
       </table>
@@ -229,23 +229,23 @@ master-slider: yes
       <div class="item active">
 <!--
         <div class="insight">
-          <img src="../assets/img/quote.png" alt="quote" class="quote" />
+          <img src="/assets/img/quote.png" alt="quote" class="quote" />
           <p>It’ll pay for itself just on better cleaning.</p>
           <p class="signed">-Shawn Barker,<br/>Barker Construction</p>
         </div>
 -->
-        <img src="../assets/img/sliders/bhk_skyjack.jpg" alt="Blackhawk concrete demo bridge">
+        <img src="/assets/img/sliders/bhk_skyjack.jpg" alt="Blackhawk concrete demo bridge">
       </div>
 
       <div class="item">
 <!--
         <div class="insight">
-          <img src="../assets/img/quote.png" alt="quote" class="quote" />
+          <img src="/assets/img/quote.png" alt="quote" class="quote" />
           <p>The StoneAge ABX-2L works great in acid service and has allowed us to become 100% automated.</p>
           <p class="signed">- Mark Blanchard,<br/>Water Works Industrial Services</p>
         </div>
 -->
-        <img src="../assets/img/sliders/bhk-bobcat.jpg" alt="Blackhawk concrete demo with bobcat skidsteer">
+        <img src="/assets/img/sliders/bhk-bobcat.jpg" alt="Blackhawk concrete demo with bobcat skidsteer">
       </div>
 
     </div><!-- End wrapper -->
