update terms and warranty

--- a/warranty.html
+++ b/warranty.html
@@ -88,7 +88,7 @@ permalink: /warranty
       </div>
       <div class="row" id="disclaimer">
         <div class="col-sm-7 term small">
-          <h2>Disclaimer of implied warranties and other remediesy</h2>
+          <h2>Disclaimer of implied warranties and other remedies</h2>
           <p>EXCEPT AS EXPRESSLY STATED HEREIN (AND TO THE FULLEST EXTENT ALLOWED UNDER APPLICABLE LAW), STONEAGE HEREBY DISCLAIMS ALL OTHER WARRANTIES, EXPRESS OR IMPLIED, INCLUDING WITHOUT LIMITATION ALL IMPLIED WARRANTIES OF MERCHANTABILITY OR FITNESS FOR A PARTICULAR PURPOSE, AND ANY AND ALL WARRANTIES, REPRESENTATIONS OR PROMISES AS TO THE QUALITY, PERFORMANCE OR FREEDOM FROM DEFECT OF THE PRODUCT COVERED BY THIS LIMITED WARRANTY.  STONEAGE FURTHER DISCLAIMS ALL IMPLIED INDEMNITIES.</p>
         </div>
         <div class="col-md-1">
@@ -99,7 +99,7 @@ permalink: /warranty
       </div>
       <div class="row" id="limit">
         <div class="col-sm-7 small">
-          <h2>Limitation of liabilitys</h2>
+          <h2>Limitation of liability</h2>
           <p>End-User specifically acknowledges that the Product may be operated at high speeds and/or pressures, and that as such it may be inherently dangerous if not used correctly.  End-User shall familiarize itself with all operation materials provided by StoneAge and shall at all times use and require its agents, employees and contractors to use all necessary and appropriate safety devices, guards and proper safe operating procedures.  In no event shall StoneAge be responsible for any injuries to persons or property caused directly or indirectly by the operation of the Product if End-User or any agent, employee, or contractor of End-User:  (1) fails to use all necessary and appropriate safety devices, guards and proper safe operating procedures; (2) fails to maintain in good working order such safety devices and guards; (3) alters or modifies the Product in any way not approved by StoneAge in advance in writing; (4)  allows the Product to be operated under more severe conditions or beyond the rated capacity specified for the Product; or (5) otherwise negligently operates the Product.    End-User shall indemnify and hold StoneAge harmless from any and all liability or obligation incurred by or against StoneAge, including costs and attorneys’ fees, to or by any person so injured.</p>
           <p>TO THE FULL EXTENT ALLOWED BY APPLICABLE LAW, STONEAGE SHALL NOT BE LIABLE FOR ANY INDIRECT, SPECIAL, INCIDENTAL, CONSEQUENTIAL, OR PUNITIVE DAMAGES (INCLUDING WITHOUT LIMITATION, LOSS OF PROFITS, LOSS OF GOODWILL, DIMINUTION OF VALUE, WORK STOPPAGE, INTERRUPTION OF BUSINESS, RENTAL OF SUBSTITUTE PRODUCT, OR OTHER COMMERCIAL LOSS EVEN TO THE EXTENT SUCH DAMAGES WOULD CONSTITUTE DIRECT DAMAGES), WITH RESPECT TO THE COVERED STONEAGE PRODUCT, OR OTHERWISE IN CONNECTION WITH THIS LIMITED WARRANTY, REGARDLESS OF WHETHER STONEAGE HAS BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGES. </p>
           <p>IT IS UNDERSTOOD THAT STONEAGE’S LIABILITY, WHETHER IN CONTRACT, IN TORT, UNDER ANY WARRANTY, IN NEGLIGENCE, OR OTHERWISE SHALL NOT EXCEED THE AMOUNT OF THE PURCHASE PRICE PAID BY THE END-USER FOR THE PRODUCT.  STONEAGE’S MAXIMUM LIABILITY SHALL NOT EXCEED, AND END-USER’S REMEDY IS LIMITED TO EITHER (1) REPAIR OR REPLACEMENT OF THE DEFECTIVE WORKMANSHIP OR MATERIAL OR, AT STONEAGE’S OPTION, (2) REFUND OF THE PURCHASE PRICE, OR (3) ISSUANCE OF A CREDIT FOR THE PURCHASE PRICE, AND SUCH REMEDIES SHALL BE END-USER’S ENTIRE AND EXCLUSIVE REMEDY. </p>
