fix search lightbox conflict

--- a/rotary-waterblast-tools/sg-swivel.html
+++ b/rotary-waterblast-tools/sg-swivel.html
@@ -93,7 +93,7 @@ master-slider: yes
                 <li role="presentation" class="active"><a href="#sg-p8" aria-controls="sg-p8" role="tab" data-toggle="tab">SG-P8P8</a></li>
                 <li role="presentation"><a href="#sg-p12" aria-controls="sg-p12" role="tab" data-toggle="tab">SG-P12P12-62</a></li>
                 <li role="presentation"><a href="#sg-mp12" aria-controls="sg-mp12" role="tab" data-toggle="tab">SG-MP12AV12</a></li>
-                <li role="presentation"><a href="#sg-mp16" aria-controls="sg-mp16" role="tab" data-toggle="tab">SG-MP16MP16</a></li>
+                <li role="presentation"><a href="#sg-mp16" aria-controls="sg-mp16" role="tab" data-toggle="tab">SG-MP16MP16-62</a></li>
                 <li role="presentation"><a href="#sg-p12k" aria-controls="sg-p12k" role="tab" data-toggle="tab">SG-CCN-P12K</a></li>
                 <li role="presentation"><a href="#sg-mp12k" aria-controls="sg-mp12k" role="tab" data-toggle="tab">SG-CCN-MP12K</a></li>
               </ul>
@@ -261,7 +261,7 @@ master-slider: yes
                   <tbody>
                     <tr>
                       <th>Tool Model</th>
-                      <td colspan="2">SG-MP16MP16</td>
+                      <td colspan="2">SG-MP16MP16-62</td>
                     </tr>
                     <tr>
                       <th>Maximum Pressure</th>
@@ -425,7 +425,8 @@ master-slider: yes
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Manuals</h3>
-                <li><a href="/assets/pdf/manuals/SG_Manual_Insert.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;SG Swivel User Manual</a></li>
+                <li><a href="/assets/pdf/manuals/SG_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;SG Swivel User Manual</a></li>
+                <li><a href="/assets/pdf/manuals/SG-CCN_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;SG-CCN Swivel User Manual</a></li>
               </ul>
             </div>
             <div class="col-sm-4">
@@ -467,7 +468,7 @@ master-slider: yes
                   <div class="panel-heading" role="tab" id="heading1">
                     <h4 class="panel-title">
                       <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse1" aria-expanded="false" aria-controls="collapse1">
-                        <strong>SG 600</strong> Service Kit for SG-P8P8/SG-MP12AV12<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                        <strong>SG 600</strong> Service kit for SG-P8P8/SG-MP12AV12<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
                       </a>
                     </h4>
                   </div>
@@ -491,18 +492,17 @@ master-slider: yes
                   <div class="panel-heading" role="tab" id="heading2">
                     <h4 class="panel-title">
                       <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse2" aria-expanded="false" aria-controls="collapse2">
-                        <strong>SG 600-M</strong> Service Kit for SG-P12P12M/SG-MP16MP16<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                        <strong>SG 600-62</strong> Service kit for SG-P12P12-62/SG-MP16MP16-62<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
                       </a>
                     </h4>
                   </div>
                   <div id="collapse2" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading2">
                     <div class="panel-body">
                       <ul>
-                        <li>1 x <strong>BC 505-S</strong> Cartridge Assembly w/ Spring</li>
-                        <li>1 x <strong>FT 026</strong> Port Screw w/ O-Ring</li>
-                        <li>1 x <strong>FT 110</strong> Syringe Assembly</li>
-                        <li>1 x <strong>GP 044</strong> 10W-40 Motor Oil, 32 oz</li>
-                        <li>1 x <strong>PL 510</strong> Tool manual</li>
+                        <li>1 x <strong>BJ 062-S</strong> Antiseize, 2g</li>
+                        <li>1 x <strong>HC 012-TO</strong> H.P. Seal Assembly</li>
+                        <li>1 x <strong>MJ 011-C</strong> Carbide Seat</li>
+                        <li>1 x <strong>PL 518</strong> Tool manual</li>
                       </ul>
                     </div>
                   </div>
@@ -511,7 +511,7 @@ master-slider: yes
                   <div class="panel-heading" role="tab" id="heading3">
                     <h4 class="panel-title">
                       <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse3" aria-expanded="false" aria-controls="collapse3">
-                        <strong>GO 602</strong> Seal Kit for GO-MP9<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                        <strong>SG 600-CCN</strong> Service kit for SG-CCN-P12K/SG-CCN-MP12K<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
                       </a>
                     </h4>
                   </div>
@@ -520,10 +520,16 @@ master-slider: yes
                       <div class="row">
                         <div class="col-sm-6">
                           <ul>
-                            <li>1 x <strong>BJ 072</strong> O-Ring</li>
-                            <li>1 x <strong>GO 123	</strong> O-Ring</li>
-                            <li>1 x <strong>RJ 011-KC</strong> Carbide Seat</li>
-                            <li>1 x <strong>RJ 012-KTO</strong> H.P. Seal &amp; O-Ring</li>
+                            <li>2 x <strong>BJ 051</strong> Wave Spring</li>
+                            <li>2 x <strong>BJ 054</strong> Carbide Seal</li>
+                            <li>1 x <strong>BJ 062-S</strong> Antiseize, 2g</li>
+                          </ul>
+                        </div>
+                        <div class="col-sm-6">
+                          <ul>
+                            <li>1 x <strong>FS 021-K</strong> O-Ring</li>
+                            <li>2 x <strong>RJ 031</strong> O-Ring</li>
+                            <li>2 x <strong>RJ 040-K</strong> O-Ring</li>
                           </ul>
                         </div>
                       </div>
@@ -534,7 +540,7 @@ master-slider: yes
                   <div class="panel-heading" role="tab" id="heading4">
                     <h4 class="panel-title">
                       <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse4" aria-expanded="false" aria-controls="collapse4">
-                        <strong>BC 602-H9-C</strong> Seal Kit for GO-H9-C<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                        <strong>SG 610</strong> Overhaul kit for SG-P8P8/SG-MP12AV12<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
                       </a>
                     </h4>
                   </div>
@@ -543,20 +549,20 @@ master-slider: yes
                       <div class="row">
                         <div class="col-sm-6">
                           <ul>
-                            <li>1 x <strong>BC 414</strong> Mandrel - Cartridge Assembly</li>
-                            <li>1 x <strong>BC 506</strong> Seat Face</li>
-                            <li>1 x <strong>BC 511</strong> Carbide Seat</li>
-                            <li>2 x <strong>BC 512-O</strong> HP Seal Assembly</li>
-                            <li>1 x <strong>BC 520</strong> Seal Retainer</li>
+                            <li>1 x <strong>BJ 011-C</strong> Carbide Seat</li>
+                            <li>1 x <strong>BJ 012-LTO</strong> H.P. Seal &amp; O-Ring</li>
+                            <li>1 x <strong>BJ 013-L</strong> Spring</li>
+                            <li>1 x <strong>BJ 062-S</strong> Antiseize, 2g</li>
+                            <li>2 x <strong>FS 004-0</strong> Grease Zerk</li>
                           </ul>
                         </div>
                         <div class="col-sm-6">
                           <ul>
-                            <li>1 x <strong>BC 522-001</strong> Inlet Seat, Grooved</li>
-                            <li>1 x <strong>BC 524</strong> Spring, Compression</li>
-                            <li>3 x <strong>BJ 072</strong> O-Ring</li>
-                            <li>1 x <strong>BJ 417</strong> O-Ring</li>
-                            <li>1 x <strong>PL 512</strong> Tool Manual</li>
+                            <li>1 x <strong>SG 006</strong> Seal</li>
+                            <li>1 x <strong>SG 007</strong> Seal</li>
+                            <li>3 x <strong>SG 008</strong> O-Ring</li>
+                            <li>1 x <strong>SG 009</strong> Bearing, Ball</li>
+                            <li>1 x <strong>PL 518</strong> Tool Manual</li>
                           </ul>
                         </div>
                       </div>
@@ -567,7 +573,7 @@ master-slider: yes
                   <div class="panel-heading" role="tab" id="heading5">
                     <h4 class="panel-title">
                       <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse5" aria-expanded="false" aria-controls="collapse5">
-                        <strong>GO 610</strong> Overhaul Kit for GO-MP9<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                        <strong>SG 610-62</strong> Overhaul kit for SG-P12P12-62/SG-MP16MP16-62<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
                       </a>
                     </h4>
                   </div>
@@ -576,30 +582,19 @@ master-slider: yes
                       <div class="row">
                         <div class="col-sm-6">
                           <ul>
-                            <li>1 x <strong>BC 009</strong> Bearing, Ball</li>
-                            <li>1 x <strong>BC 031</strong> Back-up Ring</li>
-                            <li>1 x <strong>BC 040</strong> O-Ring</li>
-                            <li>2 x <strong>BC 222</strong> Washer</li>
-                            <li>1 x <strong>BC 230</strong> Bronze Sleeve</li>
-                            <li>1 x <strong>BC 315</strong> Spring</li>
                             <li>1 x <strong>BJ 062-S</strong> Antiseize, 2g</li>
-                            <li>1 x <strong>BJ 072</strong> O-Ring</li>
-                            <li>1 x <strong>FT 026</strong> Port Screw w/ O-Ring</li>
-                            <li>1 x <strong>GO 020</strong> Seal Holder</li>
+                            <li>2 x <strong>FS 004-0</strong> Grease Zerk</li>
+                            <li>1 x <strong>HC 012-TO</strong> H.P. Seal Assembly</li>
+                            <li>2 x <strong>MJ 011-C</strong> Carbide Seat</li>
+                            <li>1 x <strong>SG 006</strong> Seal</li>
                           </ul>
                         </div>
                         <div class="col-sm-6">
                           <ul>
-                            
-                            <li>1 x <strong>GO 123</strong> O-Ring</li>
-                            <li>1 x <strong>GP 044</strong> 10W-40 Motor Oil, 32 oz</li>
-                            <li>1 x <strong>MT 010</strong> Seal, Shaft Small</li>
-                            <li>1 x <strong>RJ 007</strong> Bearing, Thrust</li>
-                            <li>1 x <strong>RJ 008</strong> O-Ring</li>
-                            <li>1 x <strong>RJ 011-KC</strong> Carbide Seat</li>
-                            <li>1 x <strong>RJ 012-KTO</strong> H.P. Seal &amp; O-Ring</li>
-                            <li>1 x <strong>RJ 029</strong> Seal, Piston</li>
-                            <li>1 x <strong>PL 511</strong> Tool Manual</li>
+                            <li>1 x <strong>SG 007</strong> Seal</li>
+                            <li>3 x <strong>SG 008</strong> O-Ring</li>
+                            <li>1 x <strong>SG 009</strong> Bearing, Ball</li>
+                            <li>1 x <strong>PL 518</strong> Tool Manual</li>
                           </ul>
                         </div>
                       </div>
@@ -610,7 +605,7 @@ master-slider: yes
                   <div class="panel-heading" role="tab" id="heading6">
                     <h4 class="panel-title">
                       <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse6" aria-expanded="false" aria-controls="collapse6">
-                        <strong>BC 610-H9-C</strong> Overhaul Kit for GO-H9-C<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                        <strong>SG 610-CCN</strong> Overhaul kit for SG-CCN-P12K/SG-CCN-MP12K<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
                       </a>
                     </h4>
                   </div>
@@ -619,26 +614,22 @@ master-slider: yes
                       <div class="row">
                         <div class="col-sm-6">
                           <ul>
-                            <li>1 x <strong>BC 009</strong> Bearing, Ball</li>
-                            <li>1 x <strong>BC 031</strong> Back-up Ring</li>
-                            <li>1 x <strong>BC 040</strong> O-Ring</li>
-                            <li>2 x <strong>BC 222</strong> Washer</li>
-                            <li>1 x <strong>BC 230</strong> Bronze Sleeve</li>
-                            <li>1 x <strong>BC 315</strong> Spring</li>
-                            <li>1 x <strong>BC 505-S</strong> Cartridge Assembly w/ Spring</li>
+                            <li>2 x <strong>BJ 051</strong> Wave Spring</li>
+                            <li>2 x <strong>BJ 054</strong> Carbide Seal</li>
                             <li>1 x <strong>BJ 062-S</strong> Antiseize, 2g</li>
+                            <li>2 x <strong>FS 004-0</strong> Grease Zerk</li>
+                            <li>1 x <strong>FS 021-K</strong> O-Ring</li>
+                            <li>2 x <strong>RJ 031</strong> O-Ring</li>
                           </ul>
                         </div>
                         <div class="col-sm-6">
                           <ul>
-                            <li>1 x <strong>FT 026</strong> Port Screw w/ O-Ring</li>
-                            <li>1 x <strong>GP 044</strong> 10W-40 Motor Oil, 32 oz</li>
-                            <li>1 x <strong>MT 010</strong> Seal, Shaft Small</li>
-                            <li>2 x <strong>RJ 007</strong> Bearing, Thrust</li>
-                            <li>1 x <strong>RJ 008</strong> O-Ring</li>
-                            <li>1 x <strong>RJ 029</strong> Seal, Piston</li>
-                            <li>1 x <strong>PL 510</strong> Tool Manual</li>
-                            <li>1 x <strong>PL 512</strong> Cartridge Manual</li>
+                            <li>2 x <strong>RJ 040-K</strong> O-Ring</li>
+                            <li>1 x <strong>SG 006</strong> Seal</li>
+                            <li>1 x <strong>SG 007</strong> Seal</li>
+                            <li>3 x <strong>SG 008</strong> O-Ring</li>
+                            <li>1 x <strong>SG 009</strong> Bearing, Ball</li>
+                            <li>1 x <strong>PL 535</strong> Tool Manual</li>
                           </ul>
                         </div>
                       </div>
@@ -649,7 +640,7 @@ master-slider: yes
                   <div class="panel-heading" role="tab" id="heading7">
                     <h4 class="panel-title">
                       <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse7" aria-expanded="false" aria-controls="collapse7">
-                        <strong>GO 612</strong> Tool Kit for GO-MP9/GO-H9-C<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                        <strong>SG 612</strong> Tool kit for all SG models<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
                       </a>
                     </h4>
                   </div>
@@ -658,8 +649,8 @@ master-slider: yes
                       <div class="row">
                         <div class="col-sm-6">
                           <ul>
-                            <li>1 x <strong>MT 105</strong> Assembly Tool</li>
-                            <li>1 x <strong>RJ 105</strong> Assembly Tool</li>
+                            <li>1 x <strong>SG 105</strong> Tool</li>
+                            <li>1 x <strong>SG 106</strong> Tool</li>
                           </ul>
                         </div>
                       </div>
