--- a/sewer-tools-nozzles/warthog-wgr-magnum.html
+++ b/sewer-tools-nozzles/warthog-wgr-magnum.html
@@ -217,6 +217,10 @@ master-slider: yes
                 <p class="caption">WGR Magnum Maintenance</p>
               </div>
             </div>
+            
+            <a href="#" data-featherlight="#mylightbox">Open element in lightbox</a>
+            <div id="mylightbox">This div will be opened in a lightbox</div>
+            
           </section>
 
           <!-- Kits -->
