--- a/waterblast-automation/torus-tr-130.html
+++ b/waterblast-automation/torus-tr-130.html
@@ -56,6 +56,8 @@ master-slider: yes
       <div class="clearfix"></div>
       </div>
       
+      <p class="product-description promo-heading" style="line-height:18px;"><em>Trade in your old Hurricane for a top of the line Torus tank cleaning tool! <br><small><a href="http://news.stoneagetools.com/tool-obsolescence-hurricane" style="font-weight:300;">Read HC obsolescence notice</a></small></em></p>
+      
       <p class="product-description">The Torus TR-130 is a powerful and highly adaptable 3-D cleaning tool designed to easily adjust to a wide range of pump capacities, working pressures, and cleaning applications.</p>
       <p>Today’s cleaning environments demand hands-free automated technology for increased safety. When the Torus TR-130 is combined with our positioning equipment in chemical and power plants these challenges are met.</p>
 
