starting search content file

--- a/rotary-waterblast-tools/backout-prevention.html
+++ b/rotary-waterblast-tools/backout-prevention.html
@@ -68,7 +68,7 @@ master-slider: yes
       <div class="clearfix"></div>
       </div>
       
-      <p class="product-description">Backout preventers are required safety equipment for high pressure pipe and tube cleaning applications. They are specifically designed to prevent the tool from exiting the pipe during operation</p>
+      <p class="product-description">Backout preventers are required safety equipment for high pressure pipe and tube cleaning applications. They are specifically designed to prevent the tool from exiting the pipe during operation.</p>
       <p>Several options are available to cover a range of diameters and mounting patterns.</p>
       
       <h2>Features</h2>
