--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 page-type: contact
-title: StoneAge Waterblast Tools - High pressure equipment for hydroblasting and industiral cleaning
+title: StoneAge Waterblast Tools - High pressure equipment for Hydroblasting | Industrial cleaning | Sewer jetting | Downhole cleaning
 permalink: /
 ---
 
